# ShanghaiTech-CS100

./: README.md
2022 spring/homework/homework1/: 1-1.c  1-2 - b.c  1-2a.c
2022 spring/homework/homework10/hw10_ref_sol/: polynomial.cpp  polynomial_parser.cpp
2022 spring/homework/homework2/: 2-1.c  2-2.c  2-3.c
2022 spring/homework/homework3/: 3-1.c  3-2.c  3-3.c
2022 spring/homework/homework4/: 2-A.cpp  Pacman_Linux  Pacman_MacOS_arm64  Pacman_MacOS_x86  input.txt  landlord.c  pacman.cpp  斗地主dp优化.cpp  示例.txt
2022 spring/homework/homework5/: 5-1.cpp  5-2.cpp  5-3.cpp
2022 spring/homework/homework5/5-3_improved/: expression_use_ref_cnt.hpp  expression_use_shared_ptr.hpp  test.cpp
2022 spring/homework/homework6/: 6-1.cpp  6-2.cpp  6-3.cpp
2022 spring/homework/homework7/: 7-1.cpp  7-2.cpp  7-2_simple_tests.cpp
2022 spring/homework/homework8,9/CS100-HW89/: CMakeLists.txt
2022 spring/homework/homework8,9/hw8-ref/: GameObjects.cpp  GameObjects.h  GameWorld.cpp  GameWorld.h
2022 spring/homework/homework8,9/hw9_ref/: CMakeLists.txt
2022 spring/homework/homework8,9/hw9_ref/src/AlienShip/: AlienShip.cpp  AlienShip.h  Alphatron.cpp  Alphatron.h  Omegatron.cpp  Omegatron.h  Sigmatron.cpp  Sigmatron.h
2022 spring/homework/homework8,9/hw9_ref/src/Background/: Background.cpp  Background.h  Explosion.cpp  Explosion.h  Star.cpp  Star.h
2022 spring/homework/homework8,9/hw9_ref/src/Dawnbreaker/: Dawnbreaker.cpp  Dawnbreaker.h
2022 spring/homework/homework8,9/hw9_ref/src/GameObject/: GameObject.cpp  GameObject.h
2022 spring/homework/homework8,9/hw9_ref/src/GameWorld/: GameWorld.cpp  GameWorld.h
2022 spring/homework/homework8,9/hw9_ref/src/Goodie/: Goodie.cpp  Goodie.h  HpRestoreGoodie.cpp  HpRestoreGoodie.h  MeteorGoodie.cpp  MeteorGoodie.h  PowerUpGoodie.cpp  PowerUpGoodie.h
2022 spring/homework/homework8,9/hw9_ref/src/Projectile/: BlueBullet.cpp  BlueBullet.h  Meteor.cpp  Meteor.h  Projectile.cpp  Projectile.h  RedBullet.cpp  RedBullet.h
2022 spring/homework/homework8,9/hw9_testcases/: README.txt  modify_cmakelists_local.py
2022 spring/tutorial/recitation10/: large_scale.tex  rect10.tex  smart_pointer.tex
2022 spring/tutorial/recitation10/code/: cyclic_example.cpp  noncyclic_example.cpp
2022 spring/tutorial/recitation12/: recitaion12.pptx
2022 spring/tutorial/recitation2/: 99.c  CS100.pptx  calculator.c  prime.c
2022 spring/tutorial/recitation3/: CS100_recitation_3.pptx  fprint_fscanf_example.c  function_decomposition_example.c  function_decomposition_exercise.c  function_pointer_example.c  fwrite_fread_example.c  optional project.pptx
2022 spring/tutorial/recitation4/: CS100_recitation_4.pptx  optional project part2.pptx  recursion_1.c  recursion_2_answer.c  recursion_2_practice.c  struct.c  union.c
2022 spring/tutorial/recitation5/: CS100_recitation_5.pptx  linked-list_example.c  linked_list_C++.cpp  linked_list_macro.c  linked_list_macro.h  linked_list_stage1.c  linked_list_stage2.cpp  linked_list_stage3.cpp  linked_list_template.cpp  node.h  redirection.md
2022 spring/tutorial/recitation6/: constructor_desctructor.cpp  destructor_with_pointer.cpp  initializer_list.cpp  recitation6.pptx
2022 spring/tutorial/recitation8/: LinkedMap.cpp  reference.txt
2022 spring/tutorial/recitation9/: rec9_work.tex
2023 spring/: to_delete.doc
2023 spring/homework/Heterologous_sodoku/: read.md
2023 spring/homework/Heterologous_sodoku/MyCode/: ans1.c  ans2.c  fill.c
2023 spring/homework/hw1/: 1-1.txt  Equation of A Line.c  Find Bugs!.c
2023 spring/homework/hw2/: Bit Operation.c  Happy Coding.cpp  Hexadecimal Calculator.cpp  No-Horse Sudoku.cpp  Quadratic Equation.cpp  hw2.md
2023 spring/homework/hw3/: Chiaki Nanami Wants to Play Games.c  Chihiro Fujisaki and Caesar Cipher.c  Golden Strawberry Challenge.c  Gundham Tanaka and the Dark Devas of Destruction.c  Nagito Komaeda and lucky days.c
2023 spring/homework/hw5/: T1_solution.txt
2023 spring/homework/hw6/: T1_solution.txt  t1_test.cpp
2023 spring/homework/hw8/: T1_solution.txt
2023 spring/homework/hw8/HW8_attachments_windows/: CMakeLists.txt
2023 spring/homework/hw8/HW8_attachments_windows/src/: main.cpp  utils.hpp
2023 spring/homework/hw8/HW8_attachments_windows/src/Framework/: CMakeLists.txt  GameManager.cpp  GameManager.hpp  ObjectBase.cpp  ObjectBase.hpp  SpriteManager.cpp  SpriteManager.hpp  WorldBase.cpp  WorldBase.hpp
2023 spring/homework/hw8/HW8_attachments_windows/src/GameObject/: CMakeLists.txt  GameObject.hpp
2023 spring/homework/hw8/HW8_attachments_windows/src/GameWorld/: CMakeLists.txt  GameWorld.cpp  GameWorld.hpp
2023 spring/homework/hw8/pvz_std_0526/: .gitignore  CMakeLists.txt
2023 spring/homework/hw8/pvz_std_0526/src/: main.cpp  utils.hpp
2023 spring/homework/hw8/pvz_std_0526/src/Framework/: GameManager.cpp  SpriteManager.cpp  SpriteManager.hpp  WorldBase.hpp
2023 spring/homework/hw8/pvz_std_0526/src/GameObject/: CMakeLists.txt  GameObject.cpp  GameObject.hpp
2023 spring/homework/hw8/pvz_std_0526/src/GameWorld/: CMakeLists.txt  GameWorld.cpp  GameWorld.hpp
2023 spring/homework/hw8/pvz_std_0526/src/Plants/: CMakeLists.txt  Plants.cpp  Plants.hpp
2023 spring/homework/hw8/pvz_std_0526/src/Projectiles/: CMakeLists.txt  Projectiles.cpp  Projectiles.hpp
2023 spring/homework/hw8/pvz_std_0526/src/SeedPacket/: CMakeLists.txt  SeedPacket.cpp  SeedPacket.hpp  Spawn.hpp
2023 spring/homework/hw8/pvz_std_0526/src/UI/: CMakeLists.txt  UI.cpp  UI.hpp
2023 spring/homework/hw8/pvz_std_0526/src/Zombies/: CMakeLists.txt  Zombies.cpp  Zombies.hpp
2023 spring/tutorial/r10/: cs100_totourial_10.md
2023 spring/tutorial/r11/: recitation11.md
2024 spring/: spring 2024
2024 spring/homework/hw4/: description.md  test_gpt.cpp
2024 spring/homework/hw8/: README.md
2024 spring/homework/hw8/hw8_solution/src/Framework/: CMakeLists.txt  GameManager.cpp  ObjectBase.cpp  SpriteManager.cpp  TextBase.cpp
2024 spring/homework/hw8/hw8_solution/src/GameObject/: CMakeLists.txt  Environment.cpp  Plants.cpp  Projectiles.cpp  Zombies.cpp
(+395 files in other folders)
